# gmusic-to-spotify

./: .gitignore  Cargo.toml  README.md  example.json  spotify.env
src/: gmusic.rs  main.rs  spotify.rs
