[package]
name = "gmusic-to-spotify"
version = "0.1.0"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["full"] }
failure = "0.1"
dotenv = "0.15"
clap = "2.33"